--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "json-server": "^1.0.0-beta.1",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
+    "vue-sweetalert2": "^5.0.11",
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
